--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ jobs:
     - name: Lint with flake8
       run: |
         # Revisa únicamente el código dentro de la carpeta 'app'
-        flake8 app --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 app --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 sample_app --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 sample_app --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
   test:
     needs: lint
