--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -19,7 +20,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: '3.12'
 
     - name: Install dependencies
       run: |
@@ -28,13 +29,15 @@ jobs:
 
     - name: Lint with flake8
       run: |
-        # Revisa únicamente el código dentro de la carpeta 'app'
+        # Revisa únicamente el código dentro de la carpeta 'sample_app'
         flake8 sample_app --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 sample_app --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
   test:
     needs: lint
     runs-on: ubuntu-latest
+    outputs:
+      coverage: ${{ steps.coverage_check.outputs.percentage }}
     strategy:
       fail-fast: false
       matrix:
@@ -56,6 +59,101 @@ jobs:
         # Si tienes dependencias en un requirements.txt, instálalas:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
-    - name: Test with pytest
+    - name: Run tests with coverage
+      run: pytest test --cov=app --cov-report=html --junitxml=test-results.xml
+    
+    - name: Extract coverage percentage
+      id: coverage_check
       run: |
-        pytest tests
+          PERCENTAGE=$(grep -o 'TOTAL.*' coverage/index.html | sed -e 's/<[^>]*>//g' | awk '{print $NF}')
+          echo "percentage=$PERCENTAGE" >> $GITHUB_OUTPUT
+    
+    # Siempre se ejecuta para subir el reporte, incluso si las pruebas fallan
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results-${{ matrix.python-version }} # Se añade la versión para diferenciar artefactos
+        path: test-results.xml
+          
+    - name: Upload coverage report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report-${{ matrix.python-version }} # Se añade la versión para diferenciar artefactos
+        path: htmlcov/
+  build-and-push:
+    name: Build and Push Docker Image
+    needs: test
+    runs-on: ubuntu-latest
+    outputs:
+      image_tags: ${{ steps.meta.outputs.tags }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: pinoched/liquia_cicd
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+  # Solo se ejecuta en Pull Requests
+  post-pr-comment:
+    name: Post Pull Request Comment
+    needs: [test, build-and-push]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' 
+    permissions:
+      pull-requests: write # Permiso para escribir comentarios en PRs
+    steps:
+      - name: Create PR Comment
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const coverage = "${{ needs.test.outputs.coverage }}";
+            const imageTags = "${{ needs.build-and-push.outputs.image_tags }}".split(',').map(tag => `\`${tag.trim()}\``).join('<br>');
+            const dockerRepo = "pinoched/liquia_cicd";
+            const dockerLink = `https://hub.docker.com/r/${dockerRepo}/tags`;
+            const runLink = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
+
+            const body = `
+            ### CI/CD Report 🚀
+
+            Docker image has been built and pushed successfully.
+            - **Image Tags:** <br>${imageTags}
+            - **Docker Hub Link:** [${dockerRepo}](${dockerLink})
+
+            ---
+
+            ### Test & Coverage ✅
+
+            - **Coverage:** \`${coverage}\`
+            - **Artifacts:** Detailed test and coverage reports have been uploaded. You can download them from the [workflow run summary](${runLink}).
+
+            `;
+
+            github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: body
+            });
