--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
+        pip install pytest pytest-cov
         # Si tienes dependencias en un requirements.txt, instálalas:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
