--- a/.github/workflows/01-ci-workflow.yml
+++ b/.github/workflows/01-ci-workflow.yml
@@ -1,15 +1,30 @@
-name: CI Pipeline
+name: Continuous Integration Workflow
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    types: [opened, synchronize, reopened]
-    branches:
-      - main
+  workflow_call :
+    inputs:
+      github_sha:
+        type: string
+        description: "The SHA of the commit that triggered the workflow"
+        required: true
+      app_folder:
+        type: string
+        default: "sample_app"
+        description: "The folder where the app is located"
+        required: false
+      test_folder:
+        type: string
+        default: "tests"
+        description: "The folder where the tests are located"
+      validate_pr:
+        type: boolean
+        default: false
+        description: "Whether to validate if the workflow was triggered by a PR"
+        required: true
 
 jobs:
+  # note: Lint and Test jobs can be run in diferents workflows to speed up the process 
+  # however for simplicity they are in the same workflow here
   lint:
     runs-on: ubuntu-latest
     
@@ -29,9 +44,9 @@ jobs:
 
     - name: Lint with flake8
       run: |
-        # Revisa únicamente el código dentro de la carpeta 'sample_app'
-        flake8 sample_app --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 sample_app --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        # Checks the code style
+        flake8 ${{ inputs.app_folder }} --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 ${{ inputs.app_folder }} --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
   test:
     needs: lint
@@ -56,12 +71,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest pytest-cov
-        # Si tienes dependencias en un requirements.txt, instálalas:
+        # if requirements.txt exists, install it
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
     - name: Run tests with coverage
-      run: pytest tests --cov=sample_app --cov-report=html --junitxml=test-results.xml
-    
+      run: pytest ${{ inputs.test_folder }} --cov=${{ inputs.app_folder }} --cov-report=html --junitxml=test-results.xml
+
     - name: Extract coverage percentage
       id: coverage_check
       run: |
@@ -82,6 +97,7 @@ jobs:
       with:
         name: coverage-report-${{ matrix.python-version }} # Se añade la versión para diferenciar artefactos
         path: htmlcov/
+  # Can run in a diferent workflow
   build-and-push:
     name: Build and Push Docker Image
     needs: test
@@ -104,8 +120,7 @@ jobs:
         with:
           images: pinoched/liquia_cicd
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
+            type=sha,format=short # Tag basado en el SHA del commit
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
 
       - name: Build and push Docker image
@@ -116,14 +131,14 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-  # Solo se ejecuta en Pull Requests
+  # only run this job for pull requests to avoid duplicate comments on main branch pushes
   post-pr-comment:
     name: Post Pull Request Comment
     needs: [test, build-and-push]
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' 
+    if: ${{ inputs.validate_pr }}
     permissions:
-      pull-requests: write # Permiso para escribir comentarios en PRs
+      pull-requests: write # Permission to create PR comments
     steps:
       - name: Create PR Comment
         uses: actions/github-script@v7
