--- a/.github/workflows/00-ci-cd.yml
+++ b/.github/workflows/00-ci-cd.yml
@@ -1,5 +1,4 @@
 name: CI/CD Pipeline
-
 on:
   push:
     branches:
@@ -12,6 +11,7 @@ on:
 concurrency:
   group: ${{ github.ref_name }}-ci-cd-deployment
   cancel-in-progress: true
+
 jobs:
   get_sha:
     name: Get Commit SHA
@@ -23,7 +23,7 @@ jobs:
         id: set_sha
         run: echo "sha=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
   validate_pr:
-    name: Validate Pull Request
+    name: Validate if it's a Pull Request
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'pull_request' }}
     outputs:
@@ -34,12 +34,14 @@ jobs:
         run: if [ "${{ github.event_name }}" == "pull_request" ]; then echo "is_pr=true" >> $GITHUB_OUTPUT; else echo "is_pr=false" >> $GITHUB_OUTPUT; fi
   
   ci:
+    name: Continuous Integration
     uses: ./.github/workflows/01-ci-workflow.yml
     with:
       github_sha: ${{ jobs.get_sha.outputs.sha }}
       validate_pr: ${{ jobs.validate_pr.outputs.is_pr }}
   
   cd:
+    name: Continuous Deployment
     needs: ci
     if : ${{ needs.ci.result == 'success' }}
     uses: ./.github/workflows/02-cd-workflow.yml
