--- a/.github/workflows/01-ci-workflow.yml
+++ b/.github/workflows/01-ci-workflow.yml
@@ -97,6 +97,7 @@ jobs:
       with:
         name: coverage-report-${{ matrix.python-version }} # Se añade la versión para diferenciar artefactos
         path: htmlcov/
+  
   # Can run in a diferent workflow
   build-and-push:
     name: Build and Push Docker Image
@@ -111,6 +112,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
